# afsr

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  build.rs  deny.toml  wrapper.h
.github/workflows/: ci.yml  deny.yml  release.yml
src/: bindings.rs  cli.rs  ext.rs  main.rs  metadata.rs  mke2fs.rs  octal.rs  pack.rs  unpack.rs  util.rs
